--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to The Cosy Crit!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/fonts/fontawesome/css/all.min.css">
 </head>
 <body>
     <header id="site-header">
@@ -34,7 +35,10 @@
     </header>
     <main id="site-body">
         <section id="hero-banner">
-            <div class="container"></div>
+            <div class="container">
+                <h1 class="hero-title title">Welcome to the Cosy Crit!</h1>
+                <p class="hero-subtitle">[DESCRIPTION FOR THE COSY CRIT]</p>
+            </div>
         </section>
         <section id="page-content" class="container">
             <article class="intro"></article>
@@ -43,7 +47,9 @@
                 <figure class="menu pastries"></figure>
             </article>
             <article class="gaming cta">
-                <figure class="image"></figure>
+                <figure class="image">
+                    <img src="/images/cta-banner-gaming.jpg">
+                </figure>
                 <div class="content"></div>
             </article>
             <article class="map"></article>
