--- a/drinks/index.html
+++ b/drinks/index.html
@@ -4,8 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinks Menu | The Cosy Crit</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/fonts/fontawesome/css/all.min.css">
 </head>
 <body>
-    
+    <header id="site-header">
+        <div class="container">
+            <figure id="logo">
+                <a href="/" class="home-link">
+                    <img src="/images/logo.svg" alt="The Cosy Crit - Click to go home" />
+                </a>
+            </figure> <!-- #logo -->
+            
+            <nav id="site-nav">
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a href="/about/" class="link">About Us</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="/drinks/" class="link selected">Drinks Menu</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="/pastries/" class="link">Pastries Menu</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="/contact/" class="link">Get in Touch</a>
+                    </li>
+                </ul> <!-- .menu -->
+            </nav> <!-- #site-nav -->
+        </div>
+    </header>
+
+    <main id="site-body">
+        <figure class="page-title">
+            <div class="container">
+                <h1 class="title">Drinks Menu</h1>
+            </div>
+        </figure>
+    </main>
+
+    <footer id="site-footer">
+        <div class="container">
+            <div id="socials">
+                <ul class="networks">
+                    <li class="network">
+                        <a href="https://www.facebook.com/" class="link facebook">
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <span class="label">Facebook</span>
+                        </a>
+                    </li>
+
+                    <li class="network">
+                        <a href="https://www.instagram.com/" class="link instagram">
+                            <i class="fa-brands fa-instagram"></i>
+                            <span class="label">Instagram</span>
+                        </a>
+                    </li>
+
+                    <li class="network">
+                        <a href="https://bsky.app/" class="link bluesky">
+                            <i class="fa-brands fa-bluesky"></i>
+                            <span class="label">BlueSky</span>
+                        </a>
+                    </li>
+                    <li class="network">
+                        <a href="https://www.twitch.tv/" class="link twitch">
+                            <i class="fa-brands fa-twitch"></i>
+                            <span class="label">Twitch</span>
+                        </a>
+                    </li>
+                </ul> <!-- .networks -->
+            </div> <!-- #socials -->
+
+            <div id="copyright">
+                <p>Copyright &copy; 2025 The Cosy Crit. All rights reserved. <a href="/privacy/">Privacy Policy</a></p>
+                <p>Powered by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="https://wearecodenation.com">Code Nation</a>. Designed with <i class="heart fa-solid fa-heart"></i>. Created by <a href="https://nathanhawkes.dev/">Nathan Hawkes</a>.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
