--- a/contact/index.html
+++ b/contact/index.html
@@ -41,6 +41,87 @@
                 <h1 class="title">Get in Touch</h1>
             </div>
         </figure>
+
+        <article class="body-text">
+            <div class="container">
+                <aside class="details">
+                    <ul class="contact-details">
+                        <li class="method telephone">
+                            <i class="fa-solid fa-telephone"></i>
+                            <div class="data">
+                                <h6 class="tile">Telephone</h6>
+                                <p class="info"><a href="tel:+441614960420">0161 496 0420</a></p>
+                            </div>
+                        </li>
+
+                        <li class="method email">
+                            <i class="fa-solid fa-at"></i>
+                            <div class="data">
+                                <h6 class="tile">Email</h6>
+                                <p class="info"><a href="mailto:hithere@thecosycrit.com">hithere@thecosycrit.com</a></p>
+                            </div>
+                        </li>
+
+                        <li class="method messengers">
+                            <i class="fa-solid fa-comment-dots"></i>
+                            <div class="data">
+                                <h6 class="tile">Message us on</h6>
+                                <p class="info">
+                                    <a href="https://wa.me/+447700900420" class="msg whatsapp">
+                                        <i class="fa-brands fa-whatsapp"></i>
+                                        <span class="label">WhatsApp</span>
+                                    </a>
+
+                                    <a href="https://m.me/" class="msg facebook-messenger">
+                                        <i class="fa-brands fa-facebook-messenger"></i>
+                                        <span class="label">Facebook Messenger</span>
+                                    </a>
+                                </p>
+                            </div>
+                        </li>
+                    </ul> <!-- .contact-details -->
+                </aside> <!-- .details -->
+
+                <form action="" class="contact-form" method="POST">
+                    <div class="row form-row fields-two name">
+                        <div class="field first-name">
+                            <label class="label" for="firstname">First Name:</label>
+                            <input type="text" name="firstname" id="firstname" class="form-field text-field" placeholder="First Name" />
+                        </div>
+                        <div class="field last-name">
+                            <label class="label" for="lastname">Last Name:</label>
+                            <input type="text" name="lastname" id="lastname" class="form-field text-field" placeholder="Last Name" />
+                        </div>
+                    </div>
+                    <div class="row form-row fields-two contact">
+                        <div class="field email">
+                            <label class="label" for="email">Email:</label>
+                            <input type="email" name="email" id="email" class="form-field text-field" placeholder="me@email.com" />
+                        </div>
+                        <div class="field telno">
+                            <label class="label" for="telno">Telephone number:</label>
+                            <input type="text" name="telno" id="telno" class="form-field text-field intlTelInput" placeholder="+44" />
+                        </div>
+                    </div>
+                    <div class="row form-row field-one message">
+                        <div class="field msg">
+                            <label class="label" for="msg">Message:</label>
+                            <textarea name="msg" id="msg" class="form-field textarea-field"></textarea>
+                        </div>
+                    </div>
+                    <div class="row form-row field-one captcha">
+                        <div class="field captcha-field">
+                            <div class="cf-turnstile" data-sitekey="0x4AAAAAABHebg3ThHpZt0cw" data-theme="light" data-size="flexible"></div>
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <button class="form-field button-field primary-button" name="submitform" id="submitform">
+                            <span class="button-label">Submit Form</span>
+                        </button>
+                    </div>
+                </form> <!-- .contact-form -->
+            </div>
+        </article>
     </main>
 
     <footer id="site-footer">
