--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Welcome to The Cosy Crit!</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/fonts/fontawesome/css/all.min.css">
+
+    <!-- Turnstile -->
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js"></script>
 </head>
 <body>
     <header id="site-header">
@@ -38,14 +41,17 @@
     <main id="site-body">
         <section id="hero-banner">
             <div class="container">
-                <h1 class="hero-title title">Welcome to the Cosy Crit!</h1>
-                <p class="hero-subtitle">[DESCRIPTION FOR THE COSY CRIT]</p>
+                <h1 class="hero-title title">Welcome to The Cosy Crit!</h1>
+                <p class="hero-subtitle">Combining caffeine and adventuring since 2025.</p>
             </div> <!-- .container -->
         </section> <!-- #hero-banner -->
 
-        <section id="page-content" class="container page-container">
-            <article class="intro">
-                [WELCOME CONTENT]
+        <section id="page-content" class="container page-container front-page">
+            <article class="welcome">
+                <p>Welcome to The Cosy Crit — your local tavern for tired adventurers, caffeine-seeking spellcasters, and dice-slinging dungeon crawlers of all alignments. Whether you're here for a +5 Cold Brew of Energy, a Long Rest Latte, or just to roll initiative over a board game and a pain au chocolat, you've found the right inn.</p>
+                <p>We’ve got plush seating, plenty of potions (some of them come in mugs), and a back room for quests of all shapes and sizes—be they tabletop, card-based, or of the "let’s pretend we're dragons" variety. Our staff are mostly friendly NPCs, and we promise the coffee is never decaffeinated unless cursed.</p>
+                <p>Feel free to explore our site like a good loot-hungry rogue—check out our menu, peek into the gaming den, or sign up for a one-shot campaign. The Cosy Crit is open to all, whether you’re a level 1 newbie or a seasoned DM with snacks.</p>
+                <p>Adventure (and caffeine) awaits!</p>
             </article>
 
             <article class="intro">
@@ -54,7 +60,10 @@
                 </figure>
 
                 <div class="content">
-                    [INTRO CONTENT]
+                    <p>The Cosy Crit is a haven for heroes, spellcasters, and caffeine connoisseurs since the grand year of 2025. Nestled in the heart of Greater Manchester, our humble little tavern has been serving up critical cups of coffee, freshly baked pastries (some say magically enhanced), and good vibes for adventurers of all alignments.</p>
+                    <p>More than just a café, The Cosy Crit is a gathering spot for the local party—hosting regular gaming events, fortnightly Dungeons & Dragons campaigns, and weekly workshops to help players and Dungeon Masters level up their storytelling, character-building, and dice-wielding skills. Whether you're a seasoned dungeon delver or just rolled your first d20, there's a seat for you at our table.</p>
+                    <p>So pull up a chair, grab a brew (or a Butterbrew, if you're feeling brave), and explore the rest of our site to learn more about our menu, events, and quests yet to come. Just mind the mimic disguised as a footstool.</p>
+                    <p>Adventure begins with the first sip.</p>
                 </div>
             </article>
 
@@ -73,7 +82,10 @@
                     <img src="/images/stock/cta-banner-gaming.jpg" alt="CTA Gaming">
                 </figure>
                 <div class="content">
-                    [CTA CONTENT]
+                    <h2>Ready to roll?</h2>
+                    <p>Our gaming nights are open to adventurers of all levels—whether you're a seasoned DM or still figuring out which dice is the d12. From chaotic one-shots to epic campaigns, there's always a seat at the table.</p>
+                    <p>Spots fill up fast, so don’t miss your initiative!</p>
+                    <a href="/contact/" class="cta-button">Enquire within</a>
                 </div>
             </article> <!-- .gaming.cta -->
 
@@ -118,8 +130,43 @@
                     </ul> <!-- .contact-details -->
                 </aside> <!-- .details -->
 
-                <form action="" class="contact-form">
-                    [CONTACT FORM]
+                <form action="" class="contact-form" method="POST">
+                    <div class="row form-row fields-two name">
+                        <div class="field first-name">
+                            <label class="label" for="firstname">First Name:</label>
+                            <input type="text" name="firstname" id="firstname" class="form-field text-field" placeholder="First Name" />
+                        </div>
+                        <div class="field last-name">
+                            <label class="label" for="lastname">Last Name:</label>
+                            <input type="text" name="lastname" id="lastname" class="form-field text-field" placeholder="Last Name" />
+                        </div>
+                    </div>
+                    <div class="row form-row fields-two contact">
+                        <div class="field email">
+                            <label class="label" for="email">Email:</label>
+                            <input type="email" name="email" id="email" class="form-field text-field" placeholder="me@email.com" />
+                        </div>
+                        <div class="field telno">
+                            <label class="label" for="telno">Telephone number:</label>
+                            <input type="text" name="telno" id="telno" class="form-field text-field intlTelInput" placeholder="+44" />
+                        </div>
+                    </div>
+                    <div class="row form-row field-one message">
+                        <div class="field msg">
+                            <label class="label" for="msg">Message:</label>
+                            <textarea name="msg" id="msg" class="form-field textarea-field"></textarea>
+                        </div>
+                    </div>
+                    <div class="row form-row field-one captcha">
+                        <div class="field captcha-field">
+                            <div class="cf-turnstile" data-sitekey="0x4AAAAAABHebg3ThHpZt0cw" data-theme="light" data-size="flexible"></div>
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <button class="form-field button-field primary-button" name="submitform" id="submitform">
+                            <span class="button-label">Submit Form</span>
+                        </button>
+                    </div>
                 </form> <!-- .contact-form -->
             </article>
         </section>
@@ -130,21 +177,21 @@
             <div id="socials">
                 <ul class="networks">
                     <li class="network">
-                        <a href="https://www.facebook.com/" class="link facebook">
+                        <a href="https://www.facebook.com/" target="_blank" class="link facebook">
                             <i class="fa-brands fa-facebook-f"></i>
                             <span class="label">Facebook</span>
                         </a>
                     </li>
 
                     <li class="network">
-                        <a href="https://www.instagram.com/" class="link instagram">
+                        <a href="https://www.instagram.com/" target="_blank" class="link instagram">
                             <i class="fa-brands fa-instagram"></i>
                             <span class="label">Instagram</span>
                         </a>
                     </li>
 
                     <li class="network">
-                        <a href="https://bsky.app/" class="link bluesky">
+                        <a href="https://bsky.app/" target="_blank" class="link bluesky">
                             <i class="fa-brands fa-bluesky"></i>
                             <span class="label">BlueSky</span>
                         </a>
