--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <li class="method telephone">
                             <i class="fa-solid fa-telephone"></i>
                             <div class="data">
-                                <h6 class="tile">Telephone</h6>
+                                <h6 class="title">Telephone</h6>
                                 <p class="info"><a href="tel:+441614960420">0161 496 0420</a></p>
                             </div>
                         </li>
@@ -105,7 +105,7 @@
                         <li class="method email">
                             <i class="fa-solid fa-at"></i>
                             <div class="data">
-                                <h6 class="tile">Email</h6>
+                                <h6 class="title">Email</h6>
                                 <p class="info"><a href="mailto:hithere@thecosycrit.com">hithere@thecosycrit.com</a></p>
                             </div>
                         </li>
@@ -113,7 +113,7 @@
                         <li class="method messengers">
                             <i class="fa-solid fa-comment-dots"></i>
                             <div class="data">
-                                <h6 class="tile">Message us on</h6>
+                                <h6 class="title">Message us on</h6>
                                 <p class="info">
                                     <a href="https://wa.me/+447700900420" class="msg whatsapp">
                                         <i class="fa-brands fa-whatsapp"></i>
