--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
 
-    <main id="site-body">
+    <main id="site-body" class="contact-page">
         <figure class="page-title">
             <div class="container">
                 <h1 class="title">Get in Touch</h1>
@@ -47,33 +47,33 @@
                 <aside class="details">
                     <ul class="contact-details">
                         <li class="method telephone">
-                            <i class="fa-solid fa-telephone"></i>
+                            <i class="contact-icon fa-solid fa-phone-volume"></i>
                             <div class="data">
-                                <h6 class="tile">Telephone</h6>
+                                <h6 class="title">Telephone</h6>
                                 <p class="info"><a href="tel:+441614960420">0161 496 0420</a></p>
                             </div>
                         </li>
 
                         <li class="method email">
-                            <i class="fa-solid fa-at"></i>
+                            <i class="contact-icon fa-solid fa-at"></i>
                             <div class="data">
-                                <h6 class="tile">Email</h6>
+                                <h6 class="title">Email</h6>
                                 <p class="info"><a href="mailto:hithere@thecosycrit.com">hithere@thecosycrit.com</a></p>
                             </div>
                         </li>
 
                         <li class="method messengers">
-                            <i class="fa-solid fa-comment-dots"></i>
+                            <i class="contact-icon fa-solid fa-comment-dots"></i>
                             <div class="data">
-                                <h6 class="tile">Message us on</h6>
+                                <h6 class="title">Message us on</h6>
                                 <p class="info">
                                     <a href="https://wa.me/+447700900420" class="msg whatsapp">
-                                        <i class="fa-brands fa-whatsapp"></i>
+                                        <i class="network-icon fa-brands fa-whatsapp"></i>
                                         <span class="label">WhatsApp</span>
                                     </a>
 
                                     <a href="https://m.me/" class="msg facebook-messenger">
-                                        <i class="fa-brands fa-facebook-messenger"></i>
+                                        <i class="network-icon fa-brands fa-facebook-messenger"></i>
                                         <span class="label">Facebook Messenger</span>
                                     </a>
                                 </p>
