--- a/drinks/index.html
+++ b/drinks/index.html
@@ -63,7 +63,7 @@
                                     <li class="gluten-free">GF</li>
                                 </ul>
                                 <p class="description">Brewed for 16 hours and poured over ice, this potion delivers smooth, bold coffee magic with none of the bitterness. Best consumed before adventuring.</p>
-                                <p class="price-notes">Add 50p for syrup</p>
+                                <p class="price-notes"><i class="fa-solid fa-hand-sparkles"></i> Add 50p for syrup</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class="none">None</span>
@@ -88,7 +88,7 @@
                                     <li class="gluten-free">GF</li>
                                 </ul>
                                 <p class="description">A quick pick-me-up straight from the espresso altar. Sharp, smooth, and never over-extracted — for when you need to pass a constitution save against fatigue.</p>
-                                <p class="price-notes">Add 30p to make it a double</p>
+                                <p class="price-notes"><i class="fa-solid fa-hand-sparkles"></i> Add 30p to make it a double</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class="none">None</span>
@@ -113,7 +113,7 @@
                                     <li class="gluten-free">GF</li>
                                 </ul>
                                 <p class="description">Our classic house coffee poured over ice, lightly sweetened or made to your liking. Syrups available for a bit of flavour flair.</p>
-                                <p class="price-notes">Add 50p for syrup</p>
+                                <p class="price-notes"><i class="fa-solid fa-hand-sparkles"></i> Add 50p for syrup</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class="none">None (check for syrup)</span>
@@ -138,7 +138,7 @@
                                     <li class="gluten-free">GF</li>
                                 </ul>
                                 <p class="description">Smooth espresso with steamed milk, topped with gentle foam — the café classic to soothe any battle-worn bard. Customisable with flavour syrups.</p>
-                                <p class="price-notes">Add 50p for syrup</p>
+                                <p class="price-notes"><i class="fa-solid fa-hand-sparkles"></i> Add 50p for syrup</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class=""><strong>Milk</strong> (non-dairy options available)</span>
