--- a/pastries/index.html
+++ b/pastries/index.html
@@ -108,7 +108,7 @@
                                     <li class="vegetarian">VG</li>
                                 </ul>
                                 <p class="description">Our chunky cookies come in several varieties, baked daily with adventurer-sized portions of sweetness. Available flavours: Chocolate Chip, Double Chocolate, Rainbow Sprinkle (with white chocolate chips)</p>
-                                <p class="price-notes">Buy three for £5.00</p>
+                                <p class="price-notes"><i class="fa-solid fa-hand-sparkles"></i> Buy three for £5.00</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class="wheat"><strong>Wheat</strong></span>,
