--- a/contact/index.html
+++ b/contact/index.html
@@ -187,7 +187,7 @@
                         iconDiv.innerHTML = '<i class="fa-solid fa-check"></i>';
                         textDiv.textContent = data.message || "Form submitted successfully!";
                         formNotice.style.display = "block"; // Show the notice
-                        document.querySelector(".form").reset();
+                        document.querySelector(".contact-form").reset();
                     } else {
                         // Update for error
                         alertDiv.classList.add("error");
