--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                         <a href="/about/" class="link" aria-label="Find out more about The Cosy Crit">About Us</a>
                     </li>
                     <li class="menu-item">
+                        <a href="/gallery/" class="link" aria-label="View some of our photos of our cafe and our game nights">Galleries</a>
+                    </li>
+                    <li class="menu-item">
                         <a href="/drinks/" class="link" aria-label="Read our drinks menu">Drinks Menu</a>
                     </li>
                     <li class="menu-item">
